# cmake-arduino

./: .travis.yml  CMakeLists.txt  README.md  cmake-arduino.ino  json_computer.cpp  json_computer.h  main.cpp  square.cpp  square.h  unit_tests.cpp
main_cpp/: main.cpp
unit_tests/: json_computer_tests.cpp  square_tests.cpp  unit_tests.cpp
